# Shorts-Fetch-yt

./: .gitignore  docker-compose.yml
worker/: Dockerfile  main.py  pyproject.toml
worker/src/: consumer.py  downloader.py  main.py  publisher.py  settings.py  yt_stub.py
worker/src/storage/: base.py  local.py  s3.py
