[project]
name = "ytdlp-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.62",
    "pika>=1.3.2",
    "pydantic>=2.12.3",
    "yt-dlp>=2025.10.22",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
